--- a/produtos.html
+++ b/produtos.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title> Biggest personalites on fashion</title>
+		<title> Dia Internacional dos Gatos</title>
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="produtos.css">
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img class="logo"src="imagem1.webp"></h1>
+				<h1><img class="logo"src="7442262.jpg"></h1>
 
 				<nav>
 					<ul>
@@ -20,6 +20,13 @@
 					</ul>
 				</nav>
 			</div>
+		<h1> Dia Internacional dos Gatos</h1>
+
+
 		</header>
+	    <p>"E segundo dados confirmados pelo levantamento do Instituto Pet Brasil, realizado em 2021, sobre o número de animais de estimação no País: a população de felinos foi a que mais cresceu em relação ao ano anterior – 6% (de 25,6 milhões para 27,1 milhões). Portanto os felinos vêm conquistando os lares brasileiros e já somam mais de 27 milhões de pets no Brasil"
+
+
+
 	</body>
 </html>
